--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.21.2",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
@@ -27,7 +28,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
+    "@types/express-jwt": "^6.0.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35"
   }
